# unblock-final-v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.bat  configure-msvc.bat  configure-ninja.bat  configure.bat  setup.bat
.github/ISSUE_TEMPLATE/: баг-репорт.md
.github/workflows/: cmake_build_clang.yml  cmake_build_clang_debug.yml  cmake_build_msvc.yml  cmake_build_msvc_debug.yml
configs/: domains_exclude.list  fake_bin.config  lua_init.config  service_setting.config
configs/blacklist/: cloudflare.list  discord.list  facebook.list  instagram.list  messengers.list  roblox.list  speedtest.list  tld.list  torrent_tracers.list  x.com.list  youtube.list
configs/dns_hosts/: cloudflare.list  discord.list  facebook.list  instagram.list  proton.list  roblox.list  torproject.list  torrent_tracers.list  twitch.list  x.com.list  youtube.list
configs/domain_test/: amazon.list  base.list  base_cloudflare.list  base_discord.list  base_roblox.list  base_speedtest.list  base_torproject.list  base_torrent_tracers.list  cloudflare.list  discord.list  facebook.list  instagram.list  messengers.list  roblox.list  speedtest.list  torrent_tracers.list  x.com.list  youtube.list
configs/ip-set/: amazon.list  cloudflare.list  roblox.list  torrent_tracers.list
configs/strategy/1.4.16/: strategy_0.config  strategy_0_alt.config  strategy_1.config
configs/strategy/1.5.0/: strategy_hostfakesplit.config  strategy_multidisorder.config  strategy_multivector_dpi_breaker.config  strategy_super.config  strategy_super_optimized.config  strategy_syndata.config  strategy_ultimate_multivector_assault.config
src/core/: CMakeLists.txt  concepts.h  core.cpp  core.h  debug.cpp  debug.h  dll_exports.inl  file_system.cpp  file_system.h  input_console.cpp  input_console.h  localization.cpp  localization.h  lock_thread.cpp  lock_thread.hpp  macro.inl  pch.h  platform.inl  ptr.h  service.cpp  service.h  timer.cpp  timer.h  types.inl  utils.cpp  utils.h  virtual_key_codes.hpp
src/engine/: CMakeLists.txt  engine.aps  engine.cpp  engine.h  engine.rc  engine_api.hpp  main.cpp  version.hpp
src/ui/: CMakeLists.txt  pch.h  ui.cpp  ui.h  ui_base.cpp  ui_base.h  ui_base_element.cpp  ui_base_element.h  ui_button.cpp  ui_button.h  ui_check_box.cpp  ui_check_box.h  ui_input.cpp  ui_input.h  ui_list_ul.cpp  ui_list_ul.h  ui_remove_app.cpp  ui_secondary_window.cpp  ui_secondary_window.h  ui_select_list.cpp  ui_select_list.h  ui_setting.cpp  ui_show_info_setting.cpp  ui_start_service.cpp  ui_stop_service.cpp  ui_testing.cpp  ui_update_app.cpp  utils_ultralight.hpp
src/unblock/: CMakeLists.txt  dns_google.cpp  dns_host.cpp  dns_host.h  domain_testing.cpp  domain_testing.h  http_load_content.cpp  http_load_content.h  pch.h  strategies_dpi.cpp  strategies_dpi.h  strategies_dpi_base.cpp  strategies_dpi_base.h  strategy_generator.cpp  strategy_generator.h  unblock.cpp  unblock.h
ui/: main.html
ui/css/: anim_loader.css  base.css  block.css  button.css  input_elements.css  list_ul.css  nav.css  secondary_window.css
ui/scripts/: botton.js  check_box.js  count_elements_to_css.js  description_window.js  input.js  lang_text.js  list_select.js  list_ul.js  menu.js  script.js  secondary_window.js
ui/text/: RU.list  US.list
